# ib_python

./: .gitignore  AAPL_1_min.csv  AAPL_1min.csv  AAPL_hourly.csv  CLAUDE.md  EURUSD_Hourly.csv  README.md  ibapi-10.30.1-py3-none-any.whl  ibapi-10.45.1-py3-none-any.whl  main.py  pyproject.toml  run_all_grid_searches_5min.py  run_bb_reversal.py  run_best_strategies_5min_detailed.py  run_first_bar_breakout.py  run_grid_search_rr.py  run_signal_system.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: 00_developer_guide.md  01_architecture.md  02_data_fetching.md  03_signal_detection_system.md
journal/001-spy-bb-reversal/: findings.md  plan.md
journal/002-core-utilities/: findings.md  plan.md
models/: morning_signal_rf.joblib  morning_signal_rf_metrics.txt  performance_report.txt
results/: SPY_all_strategies_5min_comparison.txt  SPY_first_bar_breakout_summary.txt  SPY_grid_search_dra_summary.txt  SPY_grid_search_fixed_summary.txt  SPY_grid_search_mixed_fixed_summary.txt  SPY_grid_search_rr_summary.txt
scripts/: example_usage.py  example_workflow.py  plot_bb_reversal_day.py  plot_data.py  run_bb_reversal.py  run_grid_search_dra.py  run_grid_search_fixed.py  run_grid_search_mixed_fixed.py  run_grid_search_rr.py  run_signal_system.py  test_plotting.py  train_algo.py
src/: check.py  date_converter.py  example_with_settings.py  get_ask_price.py  historical_data_fetcher.py  hourly_prices.py  ibapi_wrapper.py  models.py  settings.py  train_algo.py
src/algo/: README.md  __init__.py  labeling.py  (+17 more)
tests/: test_daily_browser.py  test_indicators.py
(+23 files in other folders)
