[project]
name = "ib-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "ibapi @ file:///workspaces/ib_python/ibapi-10.30.1-py3-none-any.whl",
    "jupyterlab>=4.4.4",
]
