[project]
name = "ib-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "ibapi @ file:///Users/yitzhakpeleg/Projects/ib_python/ibapi-10.45.1-py3-none-any.whl",
    "jupyterlab>=4.4.4",
    "ruff>=0.12.3",
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "pydantic-settings>=2.0.0",
    "tqdm>=4.66.0",
]
